# ThiccBot

./: .envrc  .gitignore  Bakefile  README.md  buildRustDocker.sh  devSetup.fish  devSetup.sh  docker-compose.ci.yml  docker-compose.prod.yml  docker-compose.yml  dockerPsql.sh  example.env  fixFilePermission.sh  flake.nix  pyproject.toml  runFlaskTests.sh  runWeb.sh  rust-toolchain.toml  shell.nix  tox.ini  wipePgVolume.sh
.github/workflows/: builAndPush.yml  ci.yml  runTests.yml
FatBotFiles/: portFatbot.py
backend/: .dockerignore  Dockerfile  README.md  initDB.py  init_db.py  requirements.txt  runTests.sh  setup.py
backend/src/: main.py  (+6 more)
bot/: Dockerfile  README.md  requirements.txt  setup.py
prod/: nginx.conf
rust_bot/: .dockerignore  .rustfmt.toml  Cargo.toml  TODO.md  buildDocker.sh  default.nix  dockerfile  generate_api.sh  run.sh  rust-toolcahin.toml
rust_bot/crates/bot/: Cargo.toml
rust_bot/crates/bot/src/: framework.rs  handler.rs  lib.rs  main.rs  utils.rs
rust_bot/crates/bot/src/commands/: admin.rs  alias.rs  key_words.rs  last_fm.rs  misc.rs  mod.rs  quotes.rs
rust_bot/crates/bot/src/utils/: checks.rs  client.rs  mod.rs  paginate.rs  parse.rs
rust_bot/crates/client/: Cargo.toml
rust_bot/crates/client/src/: alias.rs  error.rs  guilds.rs  key_words.rs  last_fm.rs  lib.rs  thicc_client.rs
rust_bot/crates/client/src/managers/: alias.rs  key_words.rs  mod.rs  quotes.rs
rust_bot/crates/client/src/models/: key_word.rs  mod.rs
web/: .gitignore  Dockerfile  README.md  bsconfig.json  clean.sh  package-lock.json  package.json  webpack.config.js
(+137 files in other folders)
