[package]
name = "bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.10.10"
tokio = { version = "1.13.0", features = ["full"] }
client = {path = "../client"}
log = "0.4.0"
env_logger = "0.8.4"
anyhow = "1.0"
rand = "0.8.4"
serenity_utils = "0.6.1"
emojis = "0.3"