[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
bytes = "1.1"
strum = { version = "0.24", features = ["derive"] }
log = "0.4.0"


[dev-dependencies]
rstest = "0.12.0"
assert_matches = "1.5.0"
pretty_assertions = "1"
httptest = "0.15"
pretty_env_logger = "0.4.0"
